--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,5 +5,6 @@ head
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
   meta(http-equiv="X-UA-Compatible", content="ie=edge")
   title Document
+  //- link(rel='stylesheet' type='text/css' href='css/main.css')
 body
-  h1 hello
+  h1 man
